--- a/templates/update-template.html
+++ b/templates/update-template.html
@@ -21,24 +21,7 @@
       <p class="text-center mb-6">Updates on our team, research, and events.</p>
 
       <ul class="space-y-6">
-        
-<li class="border border-gray-200 rounded-lg p-6 shadow-md transition">
-  <p class="text-sm text-gray-500 mb-2">2026-01-16</p>
-
-  <h3 class="text-left mb-2"> See you at OSM26</h3>
-
-  <p class="text-gray-700">Hope to see you at AGU Ocean Science Meeting 2026! Stop by our posters on Monday and Wednesday in Hall 4</p>
-
-  
-        <a
-          href="/pages/posts/some-more-text.html"
-          class="flex items-center gap-1 text-md text-gray-600 hover:underline mt-2"
-        >
-          <span>Read more</span>
-          <span aria-hidden="true" class="text-lg leading-none">&rsaquo;</span>
-        </a>
-      
-</li>
+        {{POSTS}}
       </ul>
     </main>
 
