style: format files with prettier

--- a/templates/update-template.html
+++ b/templates/update-template.html
@@ -16,11 +16,11 @@
     <header id="header"></header>
 
     <main
-      class="flex flex-col px-8 mb-auto font-sourcesansmd:px-0 md:max-w-5xl md:mx-auto"
+      class="font-sourcesansmd:px-0 mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl"
     >
       <h1>Updates</h1>
 
-      <p class="text-center mb-6">Updates on our team, research, and events.</p>
+      <p class="mb-6 text-center">Updates on our team, research, and events.</p>
 
       <ul class="space-y-6">
         {{POSTS}}
