--- a/templates/post-template.html
+++ b/templates/post-template.html
@@ -20,7 +20,7 @@
     <header id="header"></header>
 
     <main
-      class="flex flex-col px-8 mb-auto mt-4 md:px-0 md:max-w-3xl md:mx-auto"
+      class="mt-4 mb-auto flex flex-col px-8 md:mx-auto md:max-w-3xl md:px-0"
     >
       {{BREADCRUMBS}}
 
@@ -28,7 +28,7 @@
       <p class="mb-6">{{DATE}}</p>
 
       <!-- Markdown content with Tailwind Typography -->
-      <article class="prose prose-lg mx-auto mb-16 font-sourcesans">
+      <article class="prose prose-lg font-sourcesans mx-auto mb-16">
         {{CONTENT}}
       </article>
     </main>
